# Linux-Facial-Recognition

./: README.md
ele4205_projet/: .gitignore  Doxyfile  README.md
ele4205_projet/client/: CMakeLists.txt  NamesAndId.txt
ele4205_projet/client/include/: client.h  faces.h
ele4205_projet/client/src/: client.cpp  faces.cpp  main.cpp
ele4205_projet/commun/: commun.h
ele4205_projet/serveur/cross/: CMakeLists.txt  odroid-deploy-gdb.sh
ele4205_projet/serveur/cross/include/: server.h  serverBuzzer.h
ele4205_projet/serveur/cross/src/: main.cpp  main2.cpp  server.cpp  serverBuzzer.cpp
