cmake_minimum_required(VERSION 2.8.12)
add_executable(Client src/main.cpp src/client.cpp src/faces.cpp)
find_package(OpenCV REQUIRED)
if(OpenCV_FOUND)
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries(Client ${OpenCV_LIBRARIES})
else(OpenCV_FOUND)
message(FATAL ERROR "Librarie OpenCV introuvable!")
endif(OpenCV_FOUND)