cmake_minimum_required(VERSION 2.8.12)
add_executable(serveur src/main.cpp src/server.cpp)
add_executable(serverBuzzer src/main2.cpp src/serverBuzzer.cpp) 
find_package(OpenCV REQUIRED)
if(OpenCV_FOUND)
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries(serveur ${OpenCV_LIBRARIES})
else(OpenCV_FOUND)
message(FATAL ERROR "Librarie OpenCV introuvable!")
endif(OpenCV_FOUND)